overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 .debug .main-nav{
     background-color: lightcoral;
-    width: 12.5rem;
+    width: 6.25rem;
 }
 .debug .main-view header{
     background-color: lightblue;
@@ -38,6 +38,7 @@
 .main-nav{
     height: calc(100vh - 3.125rem);
     position: relative;
+    /* minus footer height */
 }
 .nav-footer{
     position: absolute;
@@ -48,7 +49,8 @@
 /* MAIN view */
 .main-view{
     
-    width: calc(100% - 12.5rem);
+    width: calc(100% - 6.25rem);
+    /* minus width of left nav */
     position: relative;
 }
 /* main header */
@@ -73,9 +75,13 @@
     padding: .625rem;
     overflow-y: auto;
     height: 100vh;
+    padding-bottom: 3.125rem; 
+    /* value equal to footer height */
+    padding-top: 3.125rem;
+    /* value equal to header height */
 }
 .main-view .main-content nav{
-    margin-top: 3.125rem;
+    
     text-align: center;
 }
 .main-view .main-content li{
